--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -247,7 +247,7 @@
     \definecolor{AgdaOperator}     {HTML}{000000}
 
     % NameKind colours.
-    \definecolor{AgdaBound}                 {HTML}{000000}
+    \definecolor{AgdaBound}                 {HTML}{A020F0}
     \definecolor{AgdaInductiveConstructor}  {HTML}{008B00}
     \definecolor{AgdaCoinductiveConstructor}{HTML}{8B7500}
     \definecolor{AgdaDatatype}              {HTML}{0000CD}
