Different color for functions

--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -252,9 +252,9 @@
     \definecolor{AgdaCoinductiveConstructor}{HTML}{8B7500}
     \definecolor{AgdaDatatype}              {HTML}{0000CD}
     \definecolor{AgdaField}                 {HTML}{EE1289}
-    \definecolor{AgdaFunction}              {HTML}{0000CD}
+    \definecolor{AgdaFunction}              {HTML}{2274A5}
     \definecolor{AgdaModule}                {HTML}{A020F0}
-    \definecolor{AgdaPostulate}             {HTML}{0000CD}
+    \definecolor{AgdaPostulate}             {HTML}{2274A5}
     \definecolor{AgdaPrimitive}             {HTML}{0000CD}
     \definecolor{AgdaRecord}                {HTML}{0000CD}
     \definecolor{AgdaArgument}              {HTML}{404040}
