--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -341,8 +341,8 @@
 \fi
 
 \newenvironment{code}%
-{\noindent\ignorespaces\advance\leftskip\mathindent\AgdaCodeStyle\pboxed\\}%
-{\\\endpboxed\par\noindent%
+{\noindent\ignorespaces\AgdaCodeStyle\pboxed\\}%
+{\\\endpboxed\noindent%
 \ignorespacesafterend}
 
 % Default column for polytable.
