--- a/paper/infir.bib
+++ b/paper/infir.bib
@@ -1,3 +1,44 @@
+@article{dybjer:indexedir,
+title = "Indexed induction–recursion",
+journal = "The Journal of Logic and Algebraic Programming",
+volume = "66",
+number = "1",
+pages = "1 - 49",
+year = "2006",
+note = "",
+issn = "1567-8326",
+doi = "http://dx.doi.org/10.1016/j.jlap.2005.07.001",
+url = "http://www.sciencedirect.com/science/article/pii/S1567832605000536",
+author = "Peter Dybjer and Anton Setzer",
+keywords = "Dependent type theory",
+keywords = "Martin–Löf type theory",
+keywords = "Inductive definitions",
+keywords = "Inductive–recursive definitions",
+keywords = "Inductive families",
+keywords = "Initial algebras",
+keywords = "Normalisation proofs",
+keywords = "Generic programming"
+}
+
+@inproceedings{diehl:levelingup,
+ author = {Diehl, Larry and Sheard, Tim},
+ title = {Leveling Up Dependent Types: Generic Programming over a Predicative Hierarchy of Universes},
+ booktitle = {Proceedings of the 2013 ACM SIGPLAN Workshop on Dependently-typed Programming},
+ series = {DTP '13},
+ year = {2013},
+ isbn = {978-1-4503-2384-0},
+ location = {Boston, Massachusetts, USA},
+ pages = {49--60},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2502409.2502414},
+ doi = {10.1145/2502409.2502414},
+ acmid = {2502414},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dependent types, generic programming, universes.},
+} 
+
+
 @inproceedings{dybjer:ir1,
  author = {Dybjer, Peter and Setzer, Anton},
  title = {A Finite Axiomatization of Inductive-Recursive Definitions},
