--- a/paper/infir.bib
+++ b/paper/infir.bib
@@ -8,7 +8,6 @@ year = "2006",
 note = "",
 issn = "1567-8326",
 doi = "http://dx.doi.org/10.1016/j.jlap.2005.07.001",
-url = "http://www.sciencedirect.com/science/article/pii/S1567832605000536",
 author = "Peter Dybjer and Anton Setzer",
 keywords = "Dependent type theory",
 keywords = "Martin–Löf type theory",
@@ -498,4 +497,13 @@ url = {http://bentnib.org/posts/2011-12-14-type-checker.html}
   pages={157--166},
   year={1966},
   publisher={ACM}
+}
+
+@inproceedings{hancock2013small,
+  title={Small induction recursion},
+  author={Hancock, Peter and McBride, Conor and Ghani, Neil and Malatesta, Lorenzo and Altenkirch, Thorsten},
+  booktitle={International Conference on Typed Lambda Calculi and Applications},
+  pages={156--172},
+  year={2013},
+  organization={Springer}
 }
